--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(PIPELINE_SRC
+	NameSpace.cpp
+	BufferObject.cpp
 	Shader.cpp
 	vs_example.cpp
 	PrimitiveProcessor.cpp
@@ -11,4 +13,4 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 ADD_LIBRARY(softpipe SHARED ${PIPELINE_SRC})
 
-#INCLUDE_DIRECTORIES(/usr/include/glm)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include/khronos)
