--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -12,6 +12,6 @@ SET(PIPELINE_SRC
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
-ADD_LIBRARY(softpipe SHARED ${PIPELINE_SRC})
+ADD_LIBRARY(glsp SHARED ${PIPELINE_SRC})
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include/khronos)
