--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 PROJECT(GLSOFTPIPE)
 
+IF(UNIX)
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
+ENDIF(UNIX)
+
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(unittests)
