--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -15,3 +15,4 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 ADD_LIBRARY(glsp SHARED ${PIPELINE_SRC})
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include/khronos)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include/export)
