Add pipeline stages model.
Signed-off-by: Jin Zhebin <Jzhebin@gmail.com>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(PIPELINE_SRC
 	BufferObject.cpp
 	Shader.cpp
 	VertexArrayObject.cpp
+	VertexCache.cpp
 	PrimitiveProcessor.cpp
 	Rasterizer.cpp
 )
