EGL implement initial.
Based on xcb(x11) and drm.

Signed-off-by: Jin Zhebin <Jzhebin@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-MESSAGE(STATUS "root is ${PROJECT_SOURCE_DIR}")
-ADD_SUBDIRECTORY(platform)
-ADD_SUBDIRECTORY(core)
+#ADD_SUBDIRECTORY(platform)
+ADD_SUBDIRECTORY(egl)
+#ADD_SUBDIRECTORY(core)
