EGL base function ready.
Can display render window on Linux.

Signed-off-by: Jin Zhebin <Jzhebin@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-#ADD_SUBDIRECTORY(platform)
+ADD_SUBDIRECTORY(platform)
+ADD_SUBDIRECTORY(OpenGL)
 ADD_SUBDIRECTORY(egl)
-#ADD_SUBDIRECTORY(core)
