--- a/src/OpenGL/core/CMakeLists.txt
+++ b/src/OpenGL/core/CMakeLists.txt
@@ -18,9 +18,10 @@ SET(PIPELINE_SRC
 )
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
-
-ADD_LIBRARY(glsp SHARED ${PIPELINE_SRC})
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPRIMITIVE_OWNS_VERTICES")
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
+ADD_LIBRARY(glsp_ogl SHARED ${PIPELINE_SRC})
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPRIMITIVE_OWNS_VERTICES")
+FIND_PACKAGE(Threads)
+TARGET_LINK_LIBRARIES(glsp_ogl ${CMAKE_THREAD_LIBS_INIT})
