Base texture feature.
TODO: mipmaping

Signed-off-by: Jin Zhebin <Jzhebin@gmail.com>

--- a/src/OpenGL/core/CMakeLists.txt
+++ b/src/OpenGL/core/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(PIPELINE_SRC
 	DrawEngine.cpp
 	VertexFetcher.cpp
 	Shader.cpp
+	Texture.cpp
 	PrimitiveAssembler.cpp
 	Clipper.cpp
 	PerspectiveDivider.cpp
