Rasterizer stages refactoring...
WIP 1

Signed-off-by: Zhebin Jin <Jzhebin@gmail.com>

--- a/src/OpenGL/core/CMakeLists.txt
+++ b/src/OpenGL/core/CMakeLists.txt
@@ -1,25 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-SET(PIPELINE_SRC
-	NameSpace.cpp
-	GLContext.cpp
-	BufferObject.cpp
-	VertexArrayObject.cpp
-	PipeStage.cpp
-	DrawEngine.cpp
-	VertexFetcher.cpp
-	Shader.cpp
-	Texture.cpp
-	PrimitiveAssembler.cpp
-	Clipper.cpp
-	PerspectiveDivider.cpp
-	ScreenMapper.cpp
-	FaceCuller.cpp
-	Rasterizer.cpp
-)
+AUX_SOURCE_DIRECTORY(. PIPELINE_SRC)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPRIMITIVE_OWNS_VERTICES")
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
 ADD_LIBRARY(glsp_ogl SHARED ${PIPELINE_SRC})
