Rasterizer stages refactoring
Done

Signed-off-by: Zhebin Jin <Jzhebin@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT(GLSOFTPIPE)
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMake/")
 
 IF(UNIX)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++1y -DGL_GLEXT_PROTOTYPES")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++11 -DGL_GLEXT_PROTOTYPES")
 ENDIF(UNIX)
 
 ADD_SUBDIRECTORY(src)
