--- a/src/egl/CMakeLists.txt
+++ b/src/egl/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 AUX_SOURCE_DIRECTORY(./main EGLMAIN_SRC)
-AUX_SOURCE_DIRECTORY(./ws/X11 EGLX11_SRC)
+AUX_SOURCE_DIRECTORY(./ws/x11 EGLX11_SRC)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
