--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 ADD_SUBDIRECTORY(platform)
 ADD_SUBDIRECTORY(OpenGL)
 ADD_SUBDIRECTORY(egl)
+ADD_SUBDIRECTORY(Common)
