--- a/src/Common/CMakeLists.txt
+++ b/src/Common/CMakeLists.txt
@@ -4,6 +4,8 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 AUX_SOURCE_DIRECTORY(. COMMON_SRC)
 
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
+
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 
 ADD_LIBRARY(glsp_common STATIC ${COMMON_SRC})
