--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-AUX_SOURCE_DIRECTORY(./LocalModel/ LOADMODEL_SRC)
+AUX_SOURCE_DIRECTORY(./LoadModel/ LOADMODEL_SRC)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lX11")
 
