Add a new feature: deferred render.
Get this idea from the TBDR HW architecture.

TODD: need flush pipeline when some states change

Signed-off-by: Zhebin Jin <Jzhebin@gmail.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/OpenGL/core)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common)
 
 #ADD_EXECUTABLE(test_softpipe ${TESTPIPE_SRC})
 ADD_EXECUTABLE(load_model ${LOADMODEL_SRC})
