--- a/src/egl/CMakeLists.txt
+++ b/src/egl/CMakeLists.txt
@@ -10,7 +10,7 @@ ADD_DEPENDENCIES(glsp_egl glsp_ogl)
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/egl/main)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/egl/ws/x11)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common/include)
 
 # drm
 FIND_PACKAGE(DRM)
