--- a/src/Common/CMakeLists.txt
+++ b/src/Common/CMakeLists.txt
@@ -2,9 +2,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
-AUX_SOURCE_DIRECTORY(. COMMON_SRC)
+AUX_SOURCE_DIRECTORY(./src COMMON_SRC)
 
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
+INCLUDE_DIRECTORIES(./include)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 
