--- a/src/platform/offscreen/CMakeLists.txt
+++ b/src/platform/offscreen/CMakeLists.txt
@@ -2,6 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(WS_OS_SRC os_output.cpp)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMAGICKCORE_HDRI_ENABLE=0 -DMAGICKCORE_QUANTUM_DEPTH=16")
 
 ADD_LIBRARY(ws_offscreen STATIC ${WS_OS_SRC})
 
