--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(CMAKE_BUILD_TYPE Release)
 #SET(CMAKE_BUILD_TYPE RelWithDebInfo)
 
 IF(UNIX)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -march=native")
 ENDIF(UNIX)
 
 ADD_SUBDIRECTORY(src)
