Windows platform porting.
1. Add a new "AppFramework" component to simplify the app
writing, and abstract a native window layer to adapt the
platform specific code, e.g. using Windows DXGI swapchain
as the display backend. Original EGL code is deprecated.

2. Add a "RenderUtility" component to collect the high level
render engine code, such as mesh/materials management.

Signed-off-by: Zhebin Jin <Jzhebin@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-PROJECT(GLSOFTPIPE)
+PROJECT(glSoftPipe)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMake/")
 SET(CMAKE_BUILD_TYPE Release)
