--- a/src/Common/CMakeLists.txt
+++ b/src/Common/CMakeLists.txt
@@ -6,6 +6,8 @@ AUX_SOURCE_DIRECTORY(./src COMMON_SRC)
 
 INCLUDE_DIRECTORIES(./include)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+IF(UNIX)
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+ENDIF(UNIX)
 
 ADD_LIBRARY(glsp_common STATIC ${COMMON_SRC})
