--- a/src/OpenGL/CMakeLists.txt
+++ b/src/OpenGL/CMakeLists.txt
@@ -12,11 +12,10 @@ ELSE(glm_FOUND)
 	MESSAGE(FATAL_ERROR "Looking for glm - not found")
 ENDIF(glm_FOUND)
 
+
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common/include)
 INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
 
-ADD_LIBRARY(glsp_ogl SHARED ${PIPELINE_SRC})
+ADD_LIBRARY(glsp_ogl STATIC ${PIPELINE_SRC})
 
 TARGET_LINK_LIBRARIES(glsp_ogl glsp_common)
-
-ADD_DEPENDENCIES(glsp_ogl glsp_common)
