--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-ADD_SUBDIRECTORY(platform)
+#ADD_SUBDIRECTORY(platform)
 ADD_SUBDIRECTORY(OpenGL)
-ADD_SUBDIRECTORY(egl)
+ADD_SUBDIRECTORY(app_framework)
+ADD_SUBDIRECTORY(RenderUtility)
+#ADD_SUBDIRECTORY(egl)
 ADD_SUBDIRECTORY(Common)
