--- a/src/egl/CMakeLists.txt
+++ b/src/egl/CMakeLists.txt
@@ -1,17 +1,23 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-AUX_SOURCE_DIRECTORY(./main EGLMAIN_SRC)
-AUX_SOURCE_DIRECTORY(./ws/x11 EGLX11_SRC)
+AUX_SOURCE_DIRECTORY(./main EGL_SRC)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
-ADD_LIBRARY(glsp_egl SHARED ${EGLMAIN_SRC} ${EGLX11_SRC})
-ADD_DEPENDENCIES(glsp_egl glsp_ogl)
-
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/egl/main)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/egl/ws/x11)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common/include)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/Common/include/khronos)
 
+IF(UNIX)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/egl/ws/x11)
+AUX_SOURCE_DIRECTORY(./ws/x11 EGLX11_SRC)
+SET(EGL_SRC ${EGL_SRC} ${EGLX11_SRC})
+ENDIF(UNIX)
+
+ADD_LIBRARY(glsp_egl SHARED ${EGL_SRC})
+
+
+IF(UNIX)
 # drm
 FIND_PACKAGE(DRM)
 IF(DRM_FOUND)
@@ -47,3 +53,4 @@ TARGET_LINK_LIBRARIES(glsp_egl
 					  ${XCB_LIBRARY}
 					  ${XLIB_XCB_LIBRARY}
 					  ${XCB_DRI2_LIBRARY})
+ENDIF(UNIX)
