--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ IF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -march=native")
 ENDIF(UNIX)
 
+ADD_DEFINITIONS(-DGLSP_ROOT="${PROJECT_SOURCE_DIR}/")
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(examples)
