--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -25,3 +25,4 @@ ENDIF(glm_FOUND)
 ADD_SUBDIRECTORY(LoadModel)
 ADD_SUBDIRECTORY(ShadowMap)
 ADD_SUBDIRECTORY(CrytekSponza)
+ADD_SUBDIRECTORY(AlphaBlend)
